--- a/package.json
+++ b/package.json
@@ -10,7 +10,15 @@
     "db:push": "prisma db push",
     "db:generate": "prisma generate",
     "db:migrate": "prisma migrate dev",
-    "db:reset": "prisma migrate reset"
+    "db:reset": "prisma migrate reset",
+    "seed:videos": "bun run scripts/seed-videos.ts",
+    "verify:videos": "bun run scripts/verify-videos.ts",
+    "setup:videos": "bun run scripts/setup-videos.ts",
+    "seed:user-plans": "bun run scripts/seed-user-plans.ts",
+    "seed:position-levels": "bun run scripts/seed-position-levels.ts",
+    "verify:user-plans": "bun run scripts/verify-user-plans.ts",
+    "setup:user-plans": "bun run scripts/setup-user-plans.ts",
+    "test:user-plan-api": "bun run scripts/test-user-plan-api.ts"
   },
   "dependencies": {
     "@dnd-kit/core": "^6.3.1",
