--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "seed:position-levels": "bun run scripts/seed-position-levels.ts",
     "verify:user-plans": "bun run scripts/verify-user-plans.ts",
     "setup:user-plans": "bun run scripts/setup-user-plans.ts",
-    "test:user-plan-api": "bun run scripts/test-user-plan-api.ts"
+    "test:user-plan-api": "bun run scripts/test-user-plan-api.ts",
+    "create:admin": "bun run scripts/create-admin.ts"
   },
   "dependencies": {
     "@dnd-kit/core": "^6.3.1",
