--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "@types/node-fetch": "^2.6.13",
     "axios": "^1.10.0",
     "bcryptjs": "^3.0.2",
+    "chart.js": "^4.5.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
@@ -84,6 +85,7 @@
     "prisma": "^6.15.0",
     "radix-ui": "^1.4.3",
     "react": "^19.0.0",
+    "react-chartjs-2": "^5.3.0",
     "react-day-picker": "^9.8.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.60.0",
